[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "python-killbill-client"
version = "0.3.0"
authors = [{ name = "Raul Cobiellas", email = "raulodev@gmail.com" }]
description = "killbill client"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["killbill", "kill", "bill"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["requests>=2.32.3"]

[project.urls]
Homepage = "https://github.com/raulodev/python-killbill-client"
Issues = "https://github.com/raulodev/python-killbill-client/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/killbill"]
